real data table css

--- a/intelliji/src/main/resources/static/index.html
+++ b/intelliji/src/main/resources/static/index.html
@@ -12,12 +12,12 @@
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
-<div id="main-content" class="container">
+<div class="container">
     <h2>IOT 20 data board <button style="float: right " class="btn btn-info" onclick="refresh()">Refresh</button></h2>
 
-    <div class="row" id="table_whole">
+    <div class="row table_whole">
         <div class="col-md-12" >
-            <table id="device_table" class="table table-striped table-hover">
+            <table class="table table-striped table-hover">
                 <thead>
                 <tr>
                     <th>Device</th>
