--- a/intelliji/src/main/resources/static/websocket.html
+++ b/intelliji/src/main/resources/static/websocket.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-  <link href="./bootstrap-4.4.1.min.css" rel="stylesheet">
-  <link href="./main.css" rel="stylesheet">
-  <script src="./socket.js"></script>
-  <script src="./jquery-3.5.1.min.js"></script>
+  <title>Real time</title>
+  <link href="./css/bootstrap-4.4.1.min.css" rel="stylesheet">
+  <link href="./css/main.css" rel="stylesheet">
+  <script src="./scripts/socket.js"></script>
+  <script src="./scripts/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
