--- a/intelliji/src/main/resources/static/googlechart.html
+++ b/intelliji/src/main/resources/static/googlechart.html
@@ -1,163 +1,279 @@
 <html>
 <head>
-  <title>Google Charts Tutorial</title>
-  <script type = "text/javascript" src = "https://www.gstatic.com/charts/loader.js">
-  </script>
-  <script src="./scripts/jquery-3.5.1.min.js"></script>
-  <script type = "text/javascript">
-    google.charts.load('current', {packages: ['corechart','line']});
-  </script>
+    <title>Google Charts Tutorial</title>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js">
+    </script>
+    <script src="./scripts/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript">
+        google.charts.load('current', {packages: ['corechart', 'line']});
+    </script>
 </head>
 
 <body>
-<div id = "container" style = "width: 550px; height: 400px; margin: 0 auto">
+<div id="temperature" style="width: 550px; height: 400px; margin: 0 auto; float: left">
 </div>
-<script language = "JavaScript">
-  var time_map = {}; // {1603838847:{"Julia-Esp32Feather":17.09,"Julia-Esp32":20.07}}
-  var person_map = {}; // {"Julia-Esp32Feather": [1603838847, 1603838848], "Julia-Esp32": [1603838847, 1603838848]}
-  var chart_map = {}; // {1603838847:{"Julia-Esp32Feather":12.0,"Julia-Esp32":23.90},1603838857:{"Julia-Esp32Feather":12.0,"Julia-Esp32":23.90}}
-  var person_temp = {}; // {"Julia-Esp32Feather": [12.5, 12.9], "Julia-Esp32": [29.0, 20.9]}
+<div id="humidity" style="width: 550px; height: 400px; margin: 0 auto; float: left">
+</div>
+<script language="JavaScript">
+    var time_map = {}; //origin {1603838847:{"Julia-Esp32Feather":17.09,"Julia-Esp32":20.07}}
+    var person_map = {}; // {"Julia-Esp32Feather": [1603838847, 1603838848], "Julia-Esp32": [1603838847, 1603838848]}
+    var chart_map = {}; //update {1603838847:{"Julia-Esp32Feather":12.0,"Julia-Esp32":23.90},1603838857:{"Julia-Esp32Feather":12.0,"Julia-Esp32":23.90}}
+    var person_temp = {}; // {"Julia-Esp32Feather": [12.5, 12.9], "Julia-Esp32": [29.0, 20.9]}
 
-  function getDate(){
-    $.ajax({
-      url:'http://localhost:8080/DeviceDBService/all',
-      type:'GET',
-      success:[function (result){
-        if(result!==null){
+    var time_map_humi = {};
+    var person_map_humi = {};
+    var chart_map_humi = {};
+    var person_humi = {};
 
-          result.forEach(function (item){
-            var obj = {};
-            var person = item.deviceHolder+"-"+item.deviceName;
-            var temperature = Number(item.temperature);
-            var unix = Number(item.recordtime);
+    var year = 0;
+    var month = 0;
+    var days = 0;
 
-            obj[person]=temperature;
-            try{
-              time_obj=time_map[unix];
-              time_obj[person]=temperature;
-              time_map[unix] = time_obj;
-            }catch (error){
-              time_map[unix]=obj;
+    function getDate() {
+        $.ajax({
+            url: 'http://localhost:8080/DeviceDBService/all',
+            type: 'GET',
+            success: [function (result) {
+                if (result !== null) {
+
+                    result.forEach(function (item) {
+                        var obj = {};
+                        var obj_humi = {};
+                        var person = item.deviceHolder + "-" + item.deviceName;
+                        var temperature = Number(item.temperature);
+                        var humidity = Number(item.humidity);
+                        var unix = Number(item.recordtime);
+
+                        obj[person] = temperature;
+                        obj_humi[person] = humidity;
+
+                        try {
+                            time_obj = time_map[unix];
+                            time_obj[person] = temperature;
+                            time_map[unix] = time_obj;
+                        } catch (error) {
+                            time_map[unix] = obj;
+                        }
+
+                        try {
+                            time_obj_humi = time_map_humi[unix];
+                            time_obj_humi[person] = humidity;
+                            time_map_humi[unix] = time_obj_humi;
+                        } catch (error) {
+                            time_map_humi[unix] = obj_humi;
+                        }
+
+                        try {
+                            person_list = person_map[person];
+                            person_list.unshift(unix);
+                            person_map[person] = person_list;
+
+                            temp_list = person_temp[person];
+                            temp_list.unshift(temperature);
+                            person_temp[person] = temp_list;
+                        } catch (error) {
+                            person_map[person] = [unix];
+                            person_temp[person] = [temperature];
+                        }
+
+                        try {
+                            person_list_humi = person_map_humi[person];
+                            person_list_humi.unshift(unix);
+                            person_map_humi[person] = person_list_humi;
+
+                            temp_list_humi = person_humi[person];
+                            temp_list_humi.unshift(humidity);
+                            person_humi[person] = temp_list_humi;
+                        } catch (error) {
+                            person_map_humi[person] = [unix];
+                            person_humi[person] = [humidity];
+                        }
+                    });
+
+                    if (timeConvert()) {
+                        google.charts.setOnLoadCallback(drawChart);
+                    } else {
+                        alert("no suitable data now, clean data and run again.")
+                    }
+
+                } else {
+                }
+
+            }],
+            error: [function (error) {
+                alert(error);
+            }]
+        });
+    }
+
+    function timeConvert() {
+        var min = 9999999999;
+        var max = 0;
+        for (const [key, value] of Object.entries(person_map)) {
+            if (value[0] > max) max = value[0];
+            if (value[value.length - 1] < min) min = value[value.length - 1];
+        }
+        //console.log(max, min);
+        if (max > min) return false;
+        var recordtime = new Date(max * 1000);
+        year = recordtime.getUTCFullYear();
+        month = recordtime.getUTCMonth() + 1;
+        days = recordtime.getUTCDate();
+
+        var gap = Math.floor(Math.abs(max - min) / 10);
+        var gap_list = [];
+        for (let i = 0; i < 10; i++) {
+            var value = max + gap * i;
+            gap_list.push(value);
+        }
+
+        for (const [key, value] of Object.entries(person_map)) {
+
+            var temp_list = [];
+            value.forEach(function (item) {
+                if (item <= min && item >= max) temp_list.push(item);
+            });
+            for (let i = 0; i < gap_list.length - 1; i++) {
+                var obj = {};
+                var temps = 0;
+                var count = 0;
+                for (let j = 0; j < value.length; j++) {
+                    if (temp_list[j] <= gap_list[i + 1] && temp_list[j] >= gap_list[0]) {
+                        try {
+                            temps += time_map[temp_list[j]][key];
+                            count++;
+                        } catch (error) {
+                        }
+
+                    }
+                }
+
+                var ave_temp = count !== 0 ? temps / count : 0;
+
+                obj[key] = ave_temp.toFixed(2);
+                try {
+                    temp_obj = chart_map[gap_list[i]];
+                    temp_obj[key] = ave_temp.toFixed(2);
+                } catch (error) {
+                    chart_map[gap_list[i]] = obj;
+
+                }
             }
 
-            try{
-              person_list=person_map[person];
-              person_list.unshift(unix);
-              person_map[person] = person_list;
+        }
 
-              temp_list=person_temp[person];
-              temp_list.unshift(temperature);
-              person_temp[person] = temp_list;
-            }catch (error){
-              person_map[person] = [unix];
-              person_temp[person] = [temperature];
+        for (const [key, value] of Object.entries(person_map_humi)) {
+
+            var humi_list = [];
+            value.forEach(function (item) {
+                if (item <= min && item >= max) humi_list.push(item);
+            });
+            //console.log(temp_list);
+            for (let i = 0; i < gap_list.length - 1; i++) {
+                var obj = {};
+                var humis = 0;
+                var count = 0;
+                for (let j = 0; j < value.length; j++) {
+                    if (humi_list[j] <= gap_list[i + 1] && humi_list[j] >= gap_list[0]) {
+                        try {
+                            humis += time_map_humi[humi_list[j]][key];
+                            count++;
+                        } catch (error) {
+                        }
+
+                    }
+                }
+                var ave_humi = count !== 0 ? humis / count : 0;
+                obj[key] = ave_humi.toFixed(2);
+                try {
+                    humi_obj = chart_map_humi[gap_list[i]];
+                    humi_obj[key] = ave_humi.toFixed(2);
+                } catch (error) {
+                    chart_map_humi[gap_list[i]] = obj;
+                }
             }
-          });
-          timeConvert();
-          google.charts.setOnLoadCallback(drawChart);
-        }
-        else{
         }
 
-      }],
-      error : [function(error)
-      {
-        alert(error);
-      }]
-    });
-  }
-
-  function timeConvert(){
-    var min = 9999999999;
-    var max = 0;
-    for (const [key, value] of Object.entries(person_map)) {
-      if(value[0]>max) max = value[0];
-      if(value[value.length-1]<min) min = value[value.length-1];
-    }
-    console.log(max, min);
-    var gap = Math.floor(Math.abs(max-min)/10);
-    var gap_list = [];
-    for(let i = 0; i < 10; i++){
-      var value = max+gap*i;
-      gap_list.push(value);
+        return true;
     }
 
-    for (const [key, value] of Object.entries(person_map)) {
+    function drawChart() {
+        // var row_num = Object.keys(chart_map).length;
+        var rows = [];
+        // var row_num_humi = Object.keys(chart_map_humi).length;
+        var rows_humi = [];
 
-      var temp_list=[];
-      value.forEach(function (item){
-        if(item<=min && item>=max) temp_list.push(item);
-      });
-      for(let i = 0; i < gap_list.length-1; i++){
-        var obj = {};
-        var temps = 0;
-        var count = 0;
-        for(let j = 0; j < value.length; j++){
-          if(temp_list[j]<=gap_list[i+1]&&temp_list[j]>=gap_list[0]){
-            try{
-              temps += time_map[temp_list[j]][key];
-              count++;
-            }catch (error){
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'recordtime');
+        let firstValue = Object.values(chart_map)[0];
+        for (const [key, value] of Object.entries(firstValue)) {
+            data.addColumn('number', key);
+        }
+        for (const [keytime, value] of Object.entries(chart_map)) {
+            var recordtime = new Date(keytime * 1000);
+            var dateString = ("0" + recordtime.getUTCHours()).slice(-2) + ":" +
+                ("0" + recordtime.getUTCMinutes()).slice(-2) + ":" +
+                ("0" + recordtime.getUTCSeconds()).slice(-2);
+            temp = [dateString];
+            for (const [key, tempvalue] of Object.entries(value)) {
+                temp.push(Number(tempvalue));
             }
-
-          }
+            rows.push(temp);
         }
+        data.addRows(rows);
 
-        var ave_temp = count !== 0 ? temps/count : 0;
-
-        obj[key]=ave_temp.toFixed(2);
-        try{
-          temp_obj = chart_map[gap_list[i]];
-          temp_obj[key]=ave_temp.toFixed(2);
-        }catch (error){
-          chart_map[gap_list[i]]=obj;
-
+        var data_humi = new google.visualization.DataTable();
+        data_humi.addColumn('string', 'recordtime');
+        let firstValueHumi = Object.values(chart_map_humi)[0];
+        for (const [key, value] of Object.entries(firstValueHumi)) {
+            data_humi.addColumn('number', key);
         }
-      }
+        for (const [keytime, value] of Object.entries(chart_map_humi)) {
+            var recordtime_humi = new Date(keytime * 1000);
+            var dateString_humi = ("0" + recordtime_humi.getUTCHours()).slice(-2) + ":" +
+                ("0" + recordtime_humi.getUTCMinutes()).slice(-2) + ":" +
+                ("0" + recordtime_humi.getUTCSeconds()).slice(-2);
+            var humi = [dateString_humi];
+            for (const [key, humivalue] of Object.entries(value)) {
+                humi.push(Number(humivalue));
+            }
+            rows_humi.push(humi);
+        }
+        data_humi.addRows(rows_humi);
 
+        // Set chart options
+        var options = {
+            'title': year + "/" + month + "/" + days + ': Average Temperatures of Holder-Device',
+            hAxis: {
+                title: 'Recordtime'
+            },
+            vAxis: {
+                title: 'Temperature'
+            },
+            'width': 550,
+            'height': 400
+        };
+
+        var options_humi = {
+            'title': year + "/" + month + "/" + days + ': Average Humidity of Holders-Devices',
+            hAxis: {
+                title: 'Recordtime'
+            },
+            vAxis: {
+                title: 'Humidity'
+            },
+            'width': 550,
+            'height': 400
+        };
+
+        // Instantiate and draw the chart.
+        var chart = new google.visualization.LineChart(document.getElementById('temperature'));
+        var humidity_chart = new google.visualization.LineChart(document.getElementById('humidity'));
+        chart.draw(data, options);
+        humidity_chart.draw(data_humi, options_humi);
     }
-  }
 
-  function drawChart() {
-    var row_num = Object.keys(chart_map).length;
-    var rows = [];
-
-    var data = new google.visualization.DataTable();
-    data.addColumn('string', 'recordtime');
-    let firstValue = Object.values(chart_map)[0];
-    for (const [key, value] of Object.entries(firstValue)) {
-      data.addColumn('number', key);
-    }
-    for (const [keytime, value] of Object.entries(chart_map)) {
-      var recordtime = new Date(keytime * 1000);
-      var dateString = ("0" + recordtime.getUTCHours()).slice(-2) + ":" +
-              ("0" + recordtime.getUTCMinutes()).slice(-2) + ":" +
-              ("0" + recordtime.getUTCSeconds()).slice(-2);
-      temp = [dateString];
-      for (const [key, tempvalue] of Object.entries(value)){
-        temp.push(Number(tempvalue));
-      }
-      rows.push(temp);
-    }
-    data.addRows(rows);
-
-    // Set chart options
-    var options = {'title' : 'Average Temperatures of Holder-Device',
-      hAxis: {
-        title: 'Recordtime'
-      },
-      vAxis: {
-        title: 'Temperature'
-      },
-      'width':550,
-      'height':400
-    };
-
-    // Instantiate and draw the chart.
-    var chart = new google.visualization.LineChart(document.getElementById('container'));
-    chart.draw(data, options);
-  }
-  getDate();
+    getDate();
 
 </script>
 </body>
