--- a/intelliji/src/main/resources/static/index.html
+++ b/intelliji/src/main/resources/static/index.html
@@ -13,12 +13,12 @@
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
 <div class="container">
-    <h2>IOT 20 data board
+    <h2 style="margin-top: 10px">IOT 20 data board
         <button style="float: right ; margin: 2px" class="btn btn-danger" onclick="cleanDB()">Clean data base</button>
-        <a href="googlechart.html" target="_blank"><button style="float: right; margin: 2px " class="btn btn-primary">Diagram</button></a>
+        <a href="googlechart.html" target="_blank"><button style="float: right; margin: 2px " class="btn btn-primary">Google Diagram</button></a>
         <a href="group_avg_temp.html" target="_blank"><button style="float: right; margin: 2px " class="btn btn-primary">Apex Diagram</button></a>
         <a href="websocket.html" target="_blank"><button style="float: right; margin: 2px " class="btn btn-success">Real time</button></a>
-        <button style="float: right; margin: 2px" class="btn btn-info" onclick="refresh()">Refresh</button>
+        <button style="float: right; margin: 2px" class="btn btn-warning" onclick="refresh()">Refresh</button>
     </h2>
 
     <div class="row table_whole">
