--- a/intelliji/src/main/resources/static/googlechart.html
+++ b/intelliji/src/main/resources/static/googlechart.html
@@ -256,7 +256,7 @@
         };
 
         var options_humi = {
-            'title': year + "/" + month + "/" + days + ': Average Humidity of Holders-Devices',
+            'title': year + "/" + month + "/" + days + ': Average Humidity of Holder-Device',
             hAxis: {
                 title: 'Recordtime'
             },
